--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -9,6 +9,7 @@ action.configuration.accel = F11
 action.delete.name         = Löschen
 action.delete.desc         = Entfernt einen Downloadeintrag aus der Liste
 action.delete.mnem         = D
+action.delete.accel			=	entf
 action.dnd.desc            = Drag&Drop Target zeigen/verstecken. Auf das Target könen Links aus dem Browser gezogen werden
 action.dnd.name            = Drag&Drop Target
 action.dnd.mnem            = 6
@@ -53,14 +54,21 @@ label.config.router_connect    = Wiederaufbau
 label.config.router_disconnect = Abmeldung
 label.config.router_ip_check   = IP Check
 label.tab.download        = Download Liste
-label.tab.plugin_activity = Plugin Aktivitäten
+
 label.tab.download.column_index    = #
 label.tab.download.column_link     = Download
 label.tab.download.column_host     = Host
 label.tab.download.column_status   = Status
 label.tab.download.column_progress = Fortschritt
-label.tab.plugin_activity.column_plugin   = Name
+
+label.tab.plugin_activity = Plugin Aktivitäten
+label.tab.plugin_activity.column_link = Link
+label.tab.plugin_activity.column_status= Status
+label.tab.plugin_activity.column_plugin   = Service
 label.tab.plugin_activity.column_progress = Fortschritt
+
+
+
 menu.file = Datei
 menu.file_mnem = D
 menu.file.load = Linkliste laden
