--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -10,7 +10,7 @@ action.delete.name         = Löschen
 action.delete.desc         = Entfernt einen Downloadeintrag aus der Liste
 action.delete.mnem         = D
 action.delete.accel			=	entf
-action.dnd.desc            = Drag&Drop Target zeigen/verstecken. Auf das Target könen Links aus dem Browser gezogen werden
+action.dnd.desc            = Zwischenablage + Drag&Drop Target zeigen/verstecken. Auf das Target könen Links aus dem Browser gezogen werden
 action.dnd.name            = Drag&Drop Target
 action.dnd.mnem            = 6
 action.dnd.accel           = ctrl 6
