Verschieben von Einträgen möglich (Ticket #70)

--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -9,7 +9,15 @@ action.configuration.accel = F11
 action.delete.name         = Löschen
 action.delete.desc         = Entfernt einen Downloadeintrag aus der Liste
 action.delete.mnem         = D
-action.delete.accel			=	entf
+action.delete.acce	       = entf
+action.edit.items_top.name     = Einträge zuerst
+action.edit.items_top.accel    = alt HOME
+action.edit.items_up.name      = Einträge hoch
+action.edit.items_up.accel     = alt UP
+action.edit.items_down.name    = Einträge runter
+action.edit.items_down.accel   = alt DOWN
+action.edit.items_bottom.name  = Einträge zuletzt
+action.edit.items_bottom.accel = alt END
 action.dnd.desc            = Zwischenablage + Drag&Drop Target zeigen/verstecken. Auf das Target könen Links aus dem Browser gezogen werden
 action.dnd.name            = Drag&Drop Target
 action.dnd.mnem            = 6
@@ -73,6 +81,8 @@ menu.file = Datei
 menu.file_mnem = D
 menu.file.load = Linkliste laden
 menu.file.save = Linkliste speichern
+menu.edit = Bearbeiten
+menu.edit_mnem = B
 menu.action = Aktionen
 menu.action_mnem = K
 menu.extra = Extra
