Konfigurationsfenster sind jetzt wieder richtig gekoppelt(Werden angezeigt, wenn man mit ALT+TAB auf JD wechselt)

--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -6,18 +6,27 @@ action.configuration.name  = Konfiguration
 action.configuration.desc  = Konfiguration ändern
 action.configuration.mnem  = C 
 action.configuration.accel = F11 
-action.delete.name         = Löschen
-action.delete.desc         = Entfernt einen Downloadeintrag aus der Liste
-action.delete.mnem         = D
-action.delete.acce	       = entf
 action.edit.items_top.name     = Einträge zuerst
+action.edit.items_top.desc     = Verschiebt alle selektierten Einträge an die erste Stelle
+action.edit.items_top.mnem     = E
 action.edit.items_top.accel    = alt HOME
 action.edit.items_up.name      = Einträge hoch
+action.edit.items_up.desc      = Verschiebt alle selektierten Einträge um eine Position nach oben
+action.edit.items_up.mnem      = O
 action.edit.items_up.accel     = alt UP
 action.edit.items_down.name    = Einträge runter
+action.edit.items_down.desc    = Verschiebt alle selektierten Einträge um eine Position nach unten
+action.edit.items_down.mnem    = U
 action.edit.items_down.accel   = alt DOWN
 action.edit.items_bottom.name  = Einträge zuletzt
+action.edit.items_bottom.desc  = Verschiebt alle selektierten Einträge an die letzte Stelle
+action.edit.items_bottom.mnem  = L
 action.edit.items_bottom.accel = alt END
+action.edit.items_remove.name  = Einträge entfernen
+action.edit.items_remove.desc  = Entfernt einen Downloadeintrag aus der Liste
+action.edit.items_remove.mnem  = D
+action.edit.items_remove.accel = DELETE
+
 action.dnd.desc            = Zwischenablage + Drag&Drop Target zeigen/verstecken. Auf das Target könen Links aus dem Browser gezogen werden
 action.dnd.name            = Drag&Drop Target
 action.dnd.mnem            = 6
@@ -58,7 +67,7 @@ action.update.name			=Autoupdate
 action.update.mnem			=A
 action.update.accel			=ctrl 7
 error.no_download  = Es konnte kein weiterer Download ermittelt werden
-label.status.welcome = JDownloader - der platformunabhängige Downloader
+label.status.welcome = JDownloader - der plattformunabhängige Downloader
 label.config.router_control    = Kontrolle
 label.config.router_login      = Anmeldung
 label.config.router_router     = Routerdaten
