--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -48,7 +48,7 @@ action.save.desc           = Speichert die aktuelle Liste
 action.save.mnem           = S
 action.save.accel          = ctrl S
 action.start.name          = Start
-action.start.desc          = Startet den Download
+action.start.desc          = Startet/Stoppt den Download
 action.start.mnem          = D
 action.start.accel         = ctrl 9
 action.pause.name          = Pause
