--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -31,10 +31,10 @@ action.dnd.desc            = Zwischenablage + Drag&Drop Target zeigen/verstecken
 action.dnd.name            = Drag&Drop Target
 action.dnd.mnem            = 6
 action.dnd.accel           = ctrl 6
-action.load.name           = Öffnen
-action.load.desc           = Lädt eine Linkliste
-action.load.mnem           = F
-action.load.accel          = ctrl O
+action.load_dlc.name           = DLC Laden
+action.load_dlc.desc           = Lädt eine Linkliste im DLC Format
+action.load_dlc.mnem           = F
+action.load_dlc.accel          = ctrl O
 action.load_container.name  = Containerdatei öffnen
 action.load_container.desc  = Lädt eine Datei mit verschlüsselten Links
 action.load_container.mnem  = C
@@ -43,10 +43,12 @@ action.move_up.name        = Hoch
 action.move_up.desc        = Verschiebt die selektierten Einträge um einen Eintrag nach oben
 action.move_down.name      = Runter
 action.move_down.desc      = Verschiebt die selektierten Einträge um einen Eintrag nach unten
-action.save.name           = Speichern
-action.save.desc           = Speichert die aktuelle Liste
-action.save.mnem           = S
-action.save.accel          = ctrl S
+action.save_dlc.name           = Als DLC Speichern
+action.save_dlc.desc           = Speichert die aktuelle Liste im DLC Format
+action.save_dlc.mnem           = S
+action.save_dlc.accel          = ctrl S
+
+
 action.start.name          = Start
 action.start.desc          = Startet/Stoppt den Download
 action.start.mnem          = D
@@ -97,6 +99,8 @@ label.tab.plugin_activity.column_progress = Fortschritt
 menu.file      = Datei
 menu.file_mnem = D
 menu.file.load_container = Containerdatei laden
+menu.file.load_dlc = DLC öffnen
+menu.file.save_dlc = Links als DLC speichern
 menu.file.load           = Linkliste laden
 menu.file.save           = Linkliste speichern
 menu.file.load_container = Container laden
