--- a/trunk/ressourcen/LanguagePack_en.properties
+++ b/trunk/ressourcen/LanguagePack_en.properties
@@ -117,6 +117,9 @@ label.tab.plugin_activity.column_progress = Progress
 
 menu.file = File
 menu.file_mnem = O
+menu.file.load_dlc = Load DLC
+menu.file.save_dlc = Save Links as DLC
+
 menu.file.load = Open File
 menu.file.save = Save File
 
