--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -53,6 +53,10 @@ action.start.name          = Start
 action.start.desc          = Startet/Stoppt den Download
 action.start.mnem          = D
 action.start.accel         = ctrl 9
+action.tester.name          = Testtrigger
+action.tester.desc          = Löst den Testtrigger aus
+action.tester.mnem          = T
+action.tester.accel         = ctrl T
 action.pause.name          = Pause
 action.pause.desc          = Nach diesen Downloads anhalten
 action.pause.mnem          = E
