--- a/trunk/ressourcen/LanguagePack_en.properties
+++ b/trunk/ressourcen/LanguagePack_en.properties
@@ -68,6 +68,11 @@ action.start.desc     = Starts/Stops the download
 action.start.mnem     = D
 action.start.accel    = ctrl 9
 
+action.tester.name          = Testtrigger
+action.tester.desc          = Fires a Testtrigger Event
+action.tester.mnem          = T
+action.tester.accel         = ctrl T
+
 action.pause.name          = Pause
 action.pause.desc          = Stop after these downloads
 action.pause.mnem          = E
