--- a/trunk/ressourcen/LanguagePack_de.properties
+++ b/trunk/ressourcen/LanguagePack_de.properties
@@ -2,26 +2,32 @@ action.add.name            = Hinzufügen
 action.add.desc            = Fügt einen Downloadeintrag hinzu 
 action.add.mnem            = H 
 action.add.accel           = ctrl V 
+
 action.configuration.name  = Konfiguration 
 action.configuration.desc  = Konfiguration ändern
 action.configuration.mnem  = C 
 action.configuration.accel = F11 
+
 action.edit.items_top.name     = Einträge zuerst
 action.edit.items_top.desc     = Verschiebt alle selektierten Einträge an die erste Stelle
 action.edit.items_top.mnem     = E
 action.edit.items_top.accel    = alt HOME
+
 action.edit.items_up.name      = Einträge hoch
 action.edit.items_up.desc      = Verschiebt alle selektierten Einträge um eine Position nach oben
 action.edit.items_up.mnem      = O
 action.edit.items_up.accel     = alt UP
+
 action.edit.items_down.name    = Einträge runter
 action.edit.items_down.desc    = Verschiebt alle selektierten Einträge um eine Position nach unten
 action.edit.items_down.mnem    = U
 action.edit.items_down.accel   = alt DOWN
+
 action.edit.items_bottom.name  = Einträge zuletzt
 action.edit.items_bottom.desc  = Verschiebt alle selektierten Einträge an die letzte Stelle
 action.edit.items_bottom.mnem  = L
 action.edit.items_bottom.accel = alt END
+
 action.edit.items_remove.name  = Einträge entfernen
 action.edit.items_remove.desc  = Entfernt einen Downloadeintrag aus der Liste
 action.edit.items_remove.mnem  = D
@@ -31,51 +37,66 @@ action.dnd.desc            = Zwischenablage + Drag&Drop Target zeigen/verstecken
 action.dnd.name            = Drag&Drop Target
 action.dnd.mnem            = 6
 action.dnd.accel           = ctrl 6
+
 action.load_dlc.name           = DLC Laden
 action.load_dlc.desc           = Lädt eine Linkliste im DLC Format
 action.load_dlc.mnem           = F
 action.load_dlc.accel          = ctrl O
+
 action.load_container.name  = Containerdatei öffnen
 action.load_container.desc  = Lädt eine Datei mit verschlüsselten Links
 action.load_container.mnem  = C
 action.load_container.accel = ctrl shift O
+
 action.move_up.name        = Hoch
 action.move_up.desc        = Verschiebt die selektierten Einträge um einen Eintrag nach oben
 action.move_down.name      = Runter
 action.move_down.desc      = Verschiebt die selektierten Einträge um einen Eintrag nach unten
+
 action.save_dlc.name           = Als DLC Speichern
 action.save_dlc.desc           = Speichert die aktuelle Liste im DLC Format
 action.save_dlc.mnem           = S
 action.save_dlc.accel          = ctrl S
 
-
 action.start.name          = Start
 action.start.desc          = Startet/Stoppt den Download
 action.start.mnem          = D
 action.start.accel         = ctrl 9
+
 action.tester.name          = Testtrigger
 action.tester.desc          = Löst den Testtrigger aus
 action.tester.mnem          = T
 action.tester.accel         = ctrl T
+
+action.unrar.name		   = Entpacken
+action.unrar.desc		   = Entpackt die RAR-Dateien im Downloadordner
+action.unrar.mnem		   = e
+action.unrar.accel		   = ctrl E
+
 action.pause.name          = Pause
 action.pause.desc          = Nach diesen Downloads anhalten
 action.pause.mnem          = E
 action.pause.accel         = ctrl 0
+
 action.exit.name           = Beenden
 action.exit.desc           = Programm beenden
 action.exit.mnem           = B
 action.exit.accel          = ctrl X
+
 action.viewlog.name        = Log Fenster anzeigen
 action.viewlog.desc        = Wenn angewählt, wird das Log Fenster angezeigt
 action.viewlog.accel       = F1
+
 action.reconnect.desc	   =Manuellen Reconnect durchführen
 action.reconnect.name      =Manueller Reconnect
 action.reconnect.mnem      =R
 action.reconnect.accel     =ctrl R
+
 action.update.desc         =Update ausführen
 action.update.name			=Autoupdate
 action.update.mnem			=A
 action.update.accel			=ctrl 7
+
 error.no_download  = Es konnte kein weiterer Download ermittelt werden
 label.status.welcome = JDownloader - der plattformunabhängige Downloader
 label.config.router_control    = Kontrolle
@@ -118,3 +139,24 @@ title.config = Konfiguration
 tooltip.status.plugin_decrypt = Zeigt, ob ein Entschlüssel-Plugin aktiv ist 
 tooltip.status.plugin_host    = Zeigt, ob Downloads aktiv sind
 menu.extra_mnem = E
+
+action.passwordlist.name   = Passwortliste bearbeiten
+action.passwordlist.desc   = Den Editor für die Passwortliste öffnen
+action.passwordlist.mnem   = b
+action.passwordlist.accel   = F3
+ 
+button.save.name = Speichern
+button.save.mnem = S
+
+button.cancel.name = Abbrechen
+button.cancel.mnem = b
+
+unrar.name = Unrar (Entpacker)
+unrar.config.activate = Unrar aktivieren:
+unrar.config.cmd = Befehl für die Englische Version von Unrar: 
+unrar.config.delete = Bei erfolgreichem Entpacken automatisch löschen: 
+unrar.config.overwrite = Dateien automatisch überschreiben: 
+unrar.interaction.name = Unrar Programm ausführen
+unrar.interaction.always = immer
+unrar.interaction.never = nie
+unrar.interaction.linkgrabber = per link/Linkgrabber
