--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -859,21 +859,21 @@ gui.menu.action.ces.accel = CTRL+h
 gui.menu.action.ces.desc = C.E.S. Eingabe aktivieren
 gui.menu.action.ces.mnem = U
 gui.menu.action.ces.name = CES Eingabe
-gui.menu.action.edit.items_bottom.accel = 
+gui.menu.action.edit.items_bottom.accel = -
 gui.menu.action.edit.items_bottom.desc = Markierte Links/Pakete ans Ende verschieben
-gui.menu.action.edit.items_bottom.mnem =  
+gui.menu.action.edit.items_bottom.mnem = - 
 gui.menu.action.edit.items_bottom.name = Ans Ende
 gui.menu.action.edit.items_down.accel = STRG+UNTEN
 gui.menu.action.edit.items_down.desc = Markierte Links/Pakete nach unten verschieben
-gui.menu.action.edit.items_down.mnem =  
+gui.menu.action.edit.items_down.mnem = - 
 gui.menu.action.edit.items_down.name = Nach unten
-gui.menu.action.edit.items_top.accel =  
+gui.menu.action.edit.items_top.accel = - 
 gui.menu.action.edit.items_top.desc = Markierte Links/Pakete an den Anfang verschieben
-gui.menu.action.edit.items_top.mnem =  
+gui.menu.action.edit.items_top.mnem =  -
 gui.menu.action.edit.items_top.name = An den Anfang
 gui.menu.action.edit.items_up.accel = STRG+OBEN
 gui.menu.action.edit.items_up.desc = Markierte Links/Pakete nach oben verschieben
-gui.menu.action.edit.items_up.mnem =  
+gui.menu.action.edit.items_up.mnem =  -
 gui.menu.action.edit.items_up.name = Nach oben
 gui.splash.text.configLoaded = lade Konfiguration
 gui.splash.text.finished = Fertig
