--- a/trunk/ressourcen/jd/languages/Spanish.lng
+++ b/trunk/ressourcen/jd/languages/Spanish.lng
@@ -404,11 +404,11 @@ gui.menu.action.edit.items_up.accel = ALT+UP
 gui.menu.action.edit.items_up.desc = Mover seleccionado entradas a la línea superior 
 gui.menu.action.edit.items_up.mnem = O
 gui.menu.action.edit.items_up.name = Mover arriba
-gui.menu.action.exit.accel = CTRL+X
+gui.menu.action.exit.accel = CTRL+Q
 gui.menu.action.exit.desc = Salir del programa
 gui.menu.action.exit.mnem = B
 gui.menu.action.exit.name = Salir
-gui.menu.action.help.accel = CTRL+9
+gui.menu.action.help.accel = F1
 gui.menu.action.help.desc = Mostrar soporte
 gui.menu.action.help.mnem = s
 gui.menu.action.help.name = Soporte
