--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -459,7 +459,7 @@ gui.menu.action.exit.accel = CTRL+X
 gui.menu.action.exit.desc = Exit program
 gui.menu.action.exit.mnem = B
 gui.menu.action.exit.name = Exit
-gui.menu.action.help.accel = CTRL+9
+gui.menu.action.help.accel = F1
 gui.menu.action.help.desc = Show support
 gui.menu.action.help.mnem = s
 gui.menu.action.help.name = Support
