--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -308,7 +308,7 @@ gui.config.tabLables.eventManager = Eventmanager
 gui.config.tabLables.general = Allgemein
 gui.config.tabLables.gui = Benutzeroberfläche
 gui.config.tabLables.hostPlugin = Host Plugins
-gui.config.tabLables.infoFileWriter = 'Info File Writer'
+gui.config.tabLables.infoFileWriter = Info File Writer
 gui.config.tabLables.jac = OCR/jAntiCaptcha
 gui.config.tabLables.links = Wichtige Links
 gui.config.tabLables.optionalPlugin = Addons
