--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -118,12 +118,13 @@ gui.config.captcha.train.show_timeout = Anzeigedauer des Eingabefensters
 gui.config.captcha.use_collector = Nicht erkannte Captchas Online sammeln
 gui.config.cbo_expert = Experten Ansicht
 gui.config.download.autochunks = Chunks an Dateigröße anpassen.
-gui.config.download.chunks = Anzahl der Verbindungen/Datei(Chunkload
+gui.config.download.chunks = Anzahl der Verbindungen/Datei (Chunkload)
+gui.config.download.chunks = Anzahl der Verbindungen/Datei (Chunkload)
 gui.config.download.crc = SFV/CRC Check wenn möglich durchführen
 gui.config.download.download.tab = Downloadsteuerung
 gui.config.download.ipcheck.disable = IP Überprüfung deaktivieren
 gui.config.download.ipcheck.regex = RegEx zum filtern der IP
-gui.config.download.ipcheck.website = IP prüfen über (Website
+gui.config.download.ipcheck.website = IP prüfen über (Website)
 gui.config.download.name = Netzwerk/Download
 gui.config.download.network.extended = Erweiterte Einstellungen
 gui.config.download.network.tab = Internet & Netzwerkverbindung
@@ -169,7 +170,7 @@ gui.config.general.loggerLevel = Level für's Logging
 gui.config.general.name = Allgemein
 gui.config.general.toDoWithDownloads = Fertig gestellte Downloads ...
 gui.config.general.webupdate.auto = automatisch, ohne Nachfrage ausführen
-gui.config.general.webupdate.beta = Auf Betaversion aktualisieren(Neustart nötig)
+gui.config.general.webupdate.beta = Auf Betaversion aktualisieren (Neustart nötig)
 gui.config.general.webupdate.disable = Update nur manuell durchführen
 gui.config.general.webupdate.osFilter = Webupdate: Alle Erweiterungen aktualisieren (auch OS-fremde)
 gui.config.gui.Browser = Browser
@@ -179,9 +180,9 @@ gui.config.gui.disabledialogs = Bestätigungsdialoge abschalten
 gui.config.gui.extended = Erweiterte Einstellungen
 gui.config.gui.gui = Benutzeroberfläche
 gui.config.gui.language = Sprache
-gui.config.gui.linkgrabber.onlinecheck = Linkgrabber: Linkstatus überprüfen(Verfügbarkeitscheck)
+gui.config.gui.linkgrabber.onlinecheck = Linkgrabber: Linkstatus überprüfen (Verfügbarkeitscheck)
 gui.config.gui.look.tab = Anzeige & Bedienung
-gui.config.gui.plaf = Style(Neustart nötig)
+gui.config.gui.plaf = Style (Neustart nötig)
 gui.config.gui.showSplash = Splashscreen beim Start zeigen
 gui.config.gui.theme = Theme
 gui.config.httpreconnect.connectPOSTParameter = POST Parameter für den Verbindungsaufbau
@@ -242,7 +243,7 @@ gui.config.liveHeader.script = HTTP Script
 gui.config.liveHeader.selectRouter = Router auswählen
 gui.config.liveHeader.user = Login User (->%%%user%%%)
 gui.config.liveHeader.waitForIP = Auf neue IP warten [sek]
-gui.config.liveHeader.waitTimeForIPCheck = Wartezeit bis zum ersten IP-Check[sek]
+gui.config.liveHeader.waitTimeForIPCheck = Wartezeit bis zum ersten IP-Check [sek]
 gui.config.liveHeader.warning.noCURLConvert = jDownloader konnte dieses CURL Script nicht konvertieren.
 gui.config.liveHeader.warning.notFound = jDownloader konnte ihre Routereinstellung nicht automatisch ermitteln.
 gui.config.liveHeader.warning.wizard = Die automatische Suche nach den Einstellungen kann einige Minuten in Anspruch nehmen. Bitte geben Sie vorher Ihre Router Logindaten ein. Jetzt ausführen?
@@ -574,8 +575,8 @@ interaction.batchreconnect.retries = Max. Wiederholungen (-1 = unendlich
 interaction.batchreconnect.terminal = Interpreter
 interaction.batchreconnect.toString = Batch Reconnect durchführen
 interaction.batchreconnect.waitForIp = Auf neue IP warten [sek]
-interaction.batchreconnect.waitForTermination = Warten x Sekunden bis Befehl beendet ist[sek]
-interaction.batchreconnect.waitTimeToFirstIPCheck = Wartezeit bis zum ersten IP-Check[sek]
+interaction.batchreconnect.waitForTermination = Warten x Sekunden bis Befehl beendet ist [sek]
+interaction.batchreconnect.waitTimeToFirstIPCheck = Wartezeit bis zum ersten IP-Check [sek]
 interaction.captchaMethodLoader.name = Captcha Erkennung aktualisieren
 interaction.dlcconverter.ccf = *.CCF:
 interaction.dlcconverter.container = Diese Container werden eingelesen:
@@ -609,7 +610,7 @@ interaction.externExecute.parameter = Parameter (1 Parameter pro Zeile)
 interaction.externExecute.test = Programm aufrufen
 interaction.externExecute.toString = Externes Programm aufrufen
 interaction.externExecute.variables = Verfügbare Parameter
-interaction.externExecute.waitForTermination = Warten x Sekunden bis Befehl beendet ist[sek](-1 für unendlich)
+interaction.externExecute.waitForTermination = Warten x Sekunden bis Befehl beendet ist [sek] (-1 für unendlich)
 interaction.externreconnect.command = Befehl (absolute Pfade verwenden)
 interaction.externreconnect.executeIn = Ausführen in (Ordner der Anwendung)
 interaction.externreconnect.name = Externer Reconnect
@@ -621,8 +622,8 @@ interaction.externreconnect.progress.3_ipcheck = ExternReconnect New IP: %s / %s
 interaction.externreconnect.retries = Max. Wiederholungen (-1 = unendlich)
 interaction.externreconnect.toString = Externes Reconnectprogramm aufrufen
 interaction.externreconnect.waitForIp = Auf neue IP warten [sek]
-interaction.externreconnect.waitForTermination = Warten x Sekunden bis Befehl beendet ist[sek]
-interaction.externreconnect.waitTimeToFirstIPCheck = Wartezeit bis zum ersten IP-Check[sek]
+interaction.externreconnect.waitForTermination = Warten x Sekunden bis Befehl beendet ist [sek]
+interaction.externreconnect.waitTimeToFirstIPCheck = Wartezeit bis zum ersten IP-Check [sek]
 interaction.infoFileWriter.content = Inhalt:
 interaction.infoFileWriter.disable = Infofilewriter aktivieren
 interaction.infoFileWriter.filename = Dateiname:
@@ -849,7 +850,7 @@ gui.config.captcha.ces.help = http://jdownloader.ath.cx/page.php?id=106
 gui.config.captcha.ces.pass = C.E.S. Passwort
 gui.config.captcha.ces.user = C.E.S. Benutzername
 gui.config.captcha.useCESPenaltyWarning = Durch frühzeitige Rückfrage Punktstrafen vermeiden
-gui.config.captcha.use_Ces = CaptchaExchangeServer verwenden(Neustart nötig)
+gui.config.captcha.use_Ces = CaptchaExchangeServer verwenden (Neustart nötig)
 gui.config.download.errorretries = Max. Neuversuche bei einem Fehler
 gui.config.download.retries = Max. Neuversuche bei vorrübergehenden Hosterproblemen
 gui.config.eventmanager.trigger.btn = Trigger ändern
@@ -900,7 +901,7 @@ plugins.optional.folderwatch.delete = Entfernen
 plugins.optional.folderwatch.folder = Ordner:
 plugins.optional.folderwatch.name = FolderWatch
 plugins.optional.folderwatch.waittime = Wartezeit
-plugins.optional.jdlowspeed.maxspeed = Maximale Internetgeschwindigkeit in kb/s (DSL 3000≈350kb/s)
+plugins.optional.jdlowspeed.maxspeed = Maximale Internetgeschwindigkeit in kb/s (DSL 3000≈320kb/s)
 plugins.optional.jdlowspeed.minspeed = Mindestgeschwindigkeit für einen Download in kb/s
 plugins.optional.jdlowspeed.name = LowSpeed Erkennung
 plugins.optional.jdlowspeed.rsonly = Nur Raidshare überwachen
