--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -702,7 +702,7 @@ sys.confirm.doRestart = These settings needing a restart. Execute restart now?
 sys.dlc.error_version = DLC encryption failed. Please be shure you're using the last JD-version.
 sys.dlc.success = DLC encryption successfully. Extract for testing now?
 sys.header.jdownloader = jDownloader
-sys.message.welcome = Welcome to jDownloader. Visit us at http://jdownloader.ath.cx
+sys.message.welcome = Visit us at: 
 sys.warning.dlcerror = Defect DL-Container
 sys.warning.dlcerror_io = DLC: Server Error (offline?)
 sys.warning.dlcerror_version = DLC Error: Outdated jD version (1)
