--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -822,7 +822,7 @@ showcaptcha.choose.file = Wählen sie eine Bilddatei aus
 showcaptcha.chooser.title = jDownloader :: Show Captcha
 sys.ask.rlyclose = Wollen Sie jDownloader wirklich schließen?
 sys.dlc.success = DLC Erstellung erfolgreich. Entpacken testen?
-sys.message.welcome = Besuch` uns auf
+sys.message.welcome = Besuch uns auf: 
 sys.warning.dlcerror = Fehlerhafter DLC Container
 sys.warning.dlcerror.server = <b>Ist die aktuelle JD Version installiert?</b> <br>Server melden:
 sys.warning.dlcerror_io = DLC: Server Fehler(offline?)
