--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -511,6 +511,10 @@ gui.menu.action.viewlog.accel = F1
 gui.menu.action.viewlog.desc = If selected, the log window is displayed
 gui.menu.action.viewlog.mnem = L
 gui.menu.action.viewlog.name = Show log window
+gui.menu.action.about.desc=Information to jDownloader
+gui.menu.action.about.name=About jDownloader
+gui.menu.action.about.mnem= -
+gui.menu.action.about.accel= -
 gui.menu.action_mnem = K
 gui.menu.edit = Edit
 gui.menu.edit_mnem = B
