--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -985,3 +985,12 @@ gui.menu.action.wiki.desc = Find help in the wikipedia
 gui.menu.action.wiki.mnem = -
 gui.menu.action.wiki.name = Wikipedia
 plugins.container.dlc.showdialogoncreatedlc = Show Confirmationmessage after creation
+addons.jdlowspeed.statusmessage.enabled = Enable Lowspeed detection
+gui.dialog.about.sourceurl = http://jdservice.ath.cx/html/about_en.html
+gui.dialog.about.title = About JDownloader
+gui.reconnect.confirm = Do you want to reconnect your connection?
+gui.reconnect.success = Reconnect successfull
+gui.support.forumurl = http://www.the-lounge.org/viewforum.php?f=291
+gui.support.wikiurl = http://jdownloader.ath.cx/wiki/index.php?title=JDownloader_Wiki:Portal_English
+gui.warning.reconnect.hasbeendisabled = Reconnect disabled!
+gui.warning.reconnect.hasbeendisabled.tooltip = To allow JDownloader to perform automated reconnects, you should enable this feature!
